        supporting them (and that will be announced in the changelog)
 - New: Paws::Net::Caller, LWPCaller  and FurlCaller now implement retry logic in case APIs
        return a retriable HTTP error
 - New: DynamoDB now benefits from crc-32 errors, and being able to retry the call
 - Better documentation: show the valid values for an attribute when it's an enum
 - Fix bug where a StrToObj map of complex objects would not instance the object correctly
 - New Service: ECR (EC2 Container Registry)
 - New Service: CloudWatch Events
 - New Service: ACM (AWS Certificate Manager)
 - EC2 API update: support for NatGateways, VpcClassicLinkDnsSupport, and ScheduledInstances
 - RDS API update: support for enhanced monitoring, and more new features
 - CloudFront API update: support for compressing and SSL to origin
 - CloudTrail API update: support for multiregion trails
 - Config API update
 - EMR API update: support for VPC EMR
 - ECS API update: deployment options
 - IoT API update: Topic rules 
 - CloudFormation API update: ContinueUpdateRollback method

0.21 16 Dec 2015
 - Bug fix: calls supposed to not return any object were failing since 0.21 (jare)
 - MojoAsyncCaller starts using Future::Mojo, a better alternative to MojoX::IOLoop::Future
 - Directory Service API update
 - Route53 API update: traffic policies
 - RDS API update: support for PortNumbers
 - RDS API update: support for KMS encrypted clusters
 - AutoScaling API update: InstanceProtection from scale in

0.20 3 Dec 2015
 - S3 can now get and put objects. Entire API should now be working correctly (glenveegee)
 - Better schema validation in builders (by Oriol Soriano) 
 - Paws::Credential::File doesn't throw warnings when users don't have $ENV{HOME} (by A.Gimenez)
 - EC2 docu update
 - RDS support for cross account snapshot sharing. New instance types too
 - Inspector API update
 - DeviceFarm API update
 - EC2 API update: dedicated hosts
 - ECS API update
 - ElasticBeanstalk API update

0.19 12 Nov 2015