@@ -298,3 +298,5 @@ Glen van Ginkel for contributions to get S3 working
 Javier Arellano for discovering Tagging bug
 
 Ioan Rogers for contributing AssumeRoleWithSAML with ADFS auth example
+
+Miquel Soriano for reporting a bug with DescribeAutoScalingGroups
