@@ -616,5 +616,7 @@ Javier Arellano for discovering Tagging bug
 
 Ioan Rogers for contributing AssumeRoleWithSAML with ADFS auth example
 
+Miquel Soriano for reporting a bug with DescribeAutoScalingGroups
+
 
 =cut
