@@ -1,0 +1,82 @@
+---
+content: |
+  <DescribeAutoScalingGroupsResponse xmlns="http://autoscaling.amazonaws.com/doc/2011-01-01/">
+    <DescribeAutoScalingGroupsResult>
+    <AutoScalingGroups>
+      <member>
+        <HealthCheckType>EC2</HealthCheckType>
+        <LoadBalancerNames/>
+        <Instances>
+          <member>
+            <LifecycleState>InService</LifecycleState>
+            <InstanceId>i-00000000</InstanceId>
+            <HealthStatus>Healthy</HealthStatus>
+            <ProtectedFromScaleIn>false</ProtectedFromScaleIn>
+            <AvailabilityZone>eu-west-1a</AvailabilityZone>
+          </member>
+          <member>
+            <LifecycleState>InService</LifecycleState>
+            <InstanceId>i-00000001</InstanceId>
+            <HealthStatus>Healthy</HealthStatus>
+            <ProtectedFromScaleIn>false</ProtectedFromScaleIn>
+            <AvailabilityZone>eu-west-1b</AvailabilityZone>
+          </member>
+          <member>
+            <LifecycleState>InService</LifecycleState>
+            <InstanceId>i-00000002</InstanceId>
+            <HealthStatus>Healthy</HealthStatus>
+            <ProtectedFromScaleIn>false</ProtectedFromScaleIn>
+            <AvailabilityZone>eu-west-1b</AvailabilityZone>
+          </member>
+        </Instances>
+        <TerminationPolicies>
+          <member>Default</member>
+        </TerminationPolicies>
+        <DefaultCooldown>300</DefaultCooldown>
+        <EnabledMetrics/>
+        <AutoScalingGroupARN>arn:aws:autoscaling:eu-west-1:000000000000:autoScalingGroup:00000000-0000-0000-0000-000000000000:autoScalingGroupName/Name-0000000000000</AutoScalingGroupARN>
+        <MaxSize>16</MaxSize>
+        <AvailabilityZones>
+          <member>eu-west-1a</member>
+          <member>eu-west-1b</member>
+        </AvailabilityZones>
+        <Tags>
+          <member>
+            <ResourceId>Name-0000000000000</ResourceId>
+            <PropagateAtLaunch>true</PropagateAtLaunch>
+            <Value>FrontPre</Value>
+            <Key>Name</Key>
+            <ResourceType>auto-scaling-group</ResourceType>
+          </member>
+          <member>
+            <ResourceId>Name-0000000000000</ResourceId>
+            <PropagateAtLaunch>true</PropagateAtLaunch>
+            <Value>Front</Value>
+            <Key>Service</Key>
+            <ResourceType>auto-scaling-group</ResourceType>
+          </member>
+          <member>
+            <ResourceId>Name-0000000000000</ResourceId>
+            <PropagateAtLaunch>true</PropagateAtLaunch>
+            <Value>FrontASG</Value>
+            <Key>aws:cloudformation:logical-id</Key>
+            <ResourceType>auto-scaling-group</ResourceType>
+          </member>
+        </Tags>
+        <LaunchConfigurationName>Name-LC-0000000000000-0000000000</LaunchConfigurationName>
+        <AutoScalingGroupName>Name-0000000000</AutoScalingGroupName>
+        <HealthCheckGracePeriod>180</HealthCheckGracePeriod>
+        <NewInstancesProtectedFromScaleIn>false</NewInstancesProtectedFromScaleIn>
+        <CreatedTime>2014-09-26T14:52:26.447Z</CreatedTime>
+        <MinSize>3</MinSize>
+        <SuspendedProcesses/>
+        <DesiredCapacity>3</DesiredCapacity>
+        <VPCZoneIdentifier>subnet-00000000,subnet-00000001</VPCZoneIdentifier>
+      </member>
+    </AutoScalingGroups>
+  </DescribeAutoScalingGroupsResult>
+  <ResponseMetadata>
+    <RequestId>00000000-0000-0000-0000-000000000000</RequestId>
+  </ResponseMetadata></DescribeAutoScalingGroupsResponse>
+headers: []
+status: 200
