@@ -9,6 +9,7 @@
         return a retriable HTTP error
  - New: DynamoDB now benefits from crc-32 errors, and being able to retry the call
  - Better documentation: show the valid values for an attribute when it's an enum
+ - Fix bug where a call to DescribeAutoScalingGroups would die if the API was not returning the LaunchConfigurationName attribute for the Instance shape (reported by msoriano)
  - Fix bug where a StrToObj map of complex objects would not instance the object correctly
  - New Service: ECR (EC2 Container Registry)
  - New Service: CloudWatch Events
